# wb-card-exchange

./: .gitignore  pyproject.toml
app/: __main__.py  commands.py  settings.py
app/src/dialogs/: states.py
app/src/dialogs/handlers/: admin.py  collection.py  user.py
app/src/dialogs/keyboards/: collection.py
app/src/services/: date_utils.py  exceptions.py  user.py
app/src/services/admin/: admin.py  texts.py
app/src/services/data_collection/: checkers.py  collection.py  texts.py
app/src/services/db/: base.py  models.py
app/src/services/db/dao/: base_dao.py  card_dao.py  service_message_dao.py  user_dao.py
app/src/services/wb/: parser.py  photo.py  url.py
migrations/: env.py
migrations/versions/: 2024_05_24_1626-d2ee3c2597f3_feat_create_tables.py  2024_05_29_1620-1e8cca4aa1fb_feat_create_tables.py
